--- a/css/index.css
+++ b/css/index.css
@@ -40,13 +40,13 @@ h1 {
     text-align: center;
 }
 
-h1::after {
+h1.cursor::after {
     content: ' ';
     white-space: pre;
     border-left: .125em solid var(--ctp-frappe-rosewater);
 }
 
-h1[data-flicker]::after {
+h1.cursor[data-flicker]::after {
     animation: cursorFlicker 1s infinite;
 }
 
